Kreirani svi ejs templejti

--- a/views/oglasi/izmena_oglasa.ejs
+++ b/views/oglasi/izmena_oglasa.ejs
@@ -69,10 +69,9 @@
     </div>
     <!--/Navigacija------------------------------------------------------------------------------------------------------------------>
     
-
     <!-- Forma za kreiranje nove kategorije-->
     <!-- Naslov -->
-    <h1 style="text-align: center;">Novi oglas </h1>
+    <h1 style="text-align: center;">Izmeni oglas </h1>
     <!-- /Naslov -->
 
     <!-- Unos podataka -->
@@ -102,7 +101,7 @@
                 <label>Poželjne veštine : </label><br>
                 <textarea maxlength="" class="form-control center-style"></textarea><br>
                 <!-- Submit -->
-                <button type="submit" class="btn btn-success">Dodaj oglas</button>
+                <button type="submit" class="btn btn-success">Sačuvaj izmene </button>
             </div>
         </form>
     </div>
@@ -128,5 +127,6 @@
         </div>
     </div>
     <!-- Footer -->    
+
 
 </body>
