--- a/views/template/base.ejs
+++ b/views/template/base.ejs
@@ -18,7 +18,7 @@
    <link rel="stylesheet" href="/stylesheets/style.css">
 
    <!--Title-->
-   <title> <% title %></title>
+   <title> <%- title %></title>
 
 </head>
 
