--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,7 @@
                
 
                 <div class="col-3">
-                    <a href = ''>
+                    <a href = '/sve'>
                         Vidi sve kategorije...   
                     </a>
                 </div>
