Dodate rute od indexa do O nama i Sve kategorije

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,8 @@
 
                   <div class="navbar-nav ml-auto">
                       
-                    <a class="nav-item nav-link active" href="#">Početna <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link " href="#">O nama</a>
+                    <a class="nav-item nav-link active" href="/">Početna</a>
+                    <a class="nav-item nav-link " href="/o_nama">O nama</a>
                     <!--  Deo koji gost vidi  -->
                     <a class="nav-item nav-link" href="#">Prijavi se</a>
                     <a class="nav-item nav-link" href="#" style="color : rgb(0, 153, 255)">Registruj se</a>
