--- a/views/log_reg/registracija.ejs
+++ b/views/log_reg/registracija.ejs
@@ -118,5 +118,31 @@
         </form>
     </div>
 
+
+
+
+
+    <!-- Footer -->
+    <div class="container-fluid fixed-bottom footer">
+        <!-- Linija -->
+        <hr class='bg-white'>
+        <div class="row text-center">
+            <div class="col-lg-4 col-sm-4 text-secondary">
+                nikolavlad63@gmail.com
+            </div>
+            <div class="col-lg-4 col-sm-4 text-secondary">
+                Web oglasi za posao - 2020 <sup>&copy</sup> 
+            </div>
+            
+            <div class="col-lg-4 col-sm-4">
+                <a href=""><i class="fab fa-instagram ml-3" style="color:blueviolet"></i></a>
+                <a href=""><i class="fab fa-facebook ml-3"></i></a>
+                <span class = 'text-secondary'><i class="fas fa-phone-alt ml-3"></i> 0123-456</span> 
+            </div>
+        </div>
+    </div>
+<!-- /Footer -->
+
+
     
 </body>
